--- a/src/App.css
+++ b/src/App.css
@@ -6,4 +6,9 @@
 }
 .app_body{
     display: flex;
+    margin-top: 35px;
+    margin-left: 20px;
+    margin-right: 20px;
+    max-width: 1200px;
 }
+
